--- a/src/pages/projects.json
+++ b/src/pages/projects.json
@@ -41,14 +41,14 @@
     "description": "简洁美观的匿名加密聊天程序，采用RSA+AES进行加密",
     "github": "https://github.com/jeanhua/alphab-client",
     "tags": ["Flutter", "dart", "rsa", "aes"],
-    "image": ""
+    "image": "./project-image/alphab.png"
   },
   {
     "name": "Memory",
     "description": "轻量开源记事本app",
     "github": "https://github.com/jeanhua/Memory",
     "tags": ["Flutter", "dart", "sqlite"],
-    "image": ""
+    "image": "./project-image/memory.png"
   },
   {
     "name": "还有更多",
