--- a/src/pages/projects.json
+++ b/src/pages/projects.json
@@ -58,6 +58,13 @@
     "image": "./project-image/memory.png"
   },
   {
+    "name": "jokerhttp",
+    "description": "go开发的简单http服务器框架",
+    "github": "https://github.com/jeanhua/jokerhttp",
+    "tags": ["golang", "http"],
+    "image": "./project-image/jokerhttp.png"
+  },
+  {
     "name": "还有更多",
     "description": "点击进入我的github主页",
     "github": "https://github.com/jeanhua",
